5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1753_1525.log
== TEST (2019-05-16 19:24:35) 
-- CODE:
vi = int(input("digite o volume inicial de água na masmorra: "))
vab = int(input("digite o volume de água bombardeado: "))
var = int(input("digite o volume retirado da masmorra: "))

acum = acum + vab
cont = 0
final = (vi + vab) - var
while final < 1000:
	final = (vi + vab) - var
	acum = acum + final
	cont = cont + 1
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    acum = acum + vab
NameError: name 'acum' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:24:39) 
-- CODE:
vi = int(input("digite o volume inicial de agua na masmorra: "))
vab = int(input("digite o volume de água bombardeado: "))
var = int(input("digite o volume retirado da masmorra: "))

acum = acum + vab
cont = 0
final = (vi + vab) - var
while final < 1000:
	final = (vi + vab) - var
	acum = acum + final
	cont = cont + 1
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    acum = acum + vab
NameError: name 'acum' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:24:53) 
-- CODE:
vi = int(input("digite o volume inicial de agua na masmorra: "))
vab = int(input("digite o volume de agua bombardeado: "))
var = int(input("digite o volume retirado da masmorra: "))

acum = acum + vab
cont = 0
final = (vi + vab) - var
while final < 1000:
	final = (vi + vab) - var
	acum = acum + final
	cont = cont + 1
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    acum = acum + vab
NameError: name 'acum' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:25:13) 
-- CODE:
vi = int(input("digite o volume inicial de agua na masmorra: "))
vab = int(input("digite o volume de agua bombardeado: "))
var = int(input("digite o volume retirado da masmorra: "))

acum = acum + vab
cont = 0
final = (vi + vab) - var
while final < 1000:
	final = (vi + vab) - var
	acum = acum + final
	cont = cont + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    acum = acum + vab
NameError: name 'acum' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:25:37) 
-- CODE:
vi = int(input("digite o volume inicial de agua na masmorra: "))
vab = int(input("digite o volume de agua bombardeado: "))
var = int(input("digite o volume retirado da masmorra: "))
acum = 0
cont = 0
final = (vi + vab) - var
while final < 1000:
	final = (vi + vab) - var
	acum = acum + final
	cont = cont + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    acum = acum + vab
NameError: name 'acum' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:27:29) 
-- CODE:
vi = int(input("digite o volume inicial de agua na masmorra: "))
vab = int(input("digite o volume de agua bombardeado: "))
var = int(input("digite o volume retirado da masmorra: "))
acum = 0
cont = 0
while final <= 1000:
	final = (vi + vab) - var
	acum = acum + final
	cont = cont + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while final <= 1000:
NameError: name 'final' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:27:38) 
-- CODE:
vi = int(input("digite o volume inicial de agua na masmorra: "))
vab = int(input("digite o volume de agua bombardeado: "))
var = int(input("digite o volume retirado da masmorra: "))
acum = 0
cont = 0
while final <= 1000:
	final = (vi + vab) - var
	acum = acum + final
	cont = cont + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while final <= 1000:
NameError: name 'final' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:27:50) 
-- CODE:
vi = int(input("digite o volume inicial de agua na masmorra: "))
vab = int(input("digite o volume de agua bombardeado: "))
var = int(input("digite o volume retirado da masmorra: "))
acum = 0
cont = 0
final = (vi + vab) - var
while final <= 1000:
	final = (vi + vab) - var
	acum = acum + final
	cont = cont + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while final <= 1000:
NameError: name 'final' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:27:57) 
-- CODE:
vi = int(input("digite o volume inicial de agua na masmorra: "))
vab = int(input("digite o volume de agua bombardeado: "))
var = int(input("digite o volume retirado da masmorra: "))
acum = 0
cont = 0
final = (vi + vab) - var
while final <= 1000:
	final = (vi + vab) - var
	acum = acum + final
	cont = cont + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while final <= 1000:
NameError: name 'final' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:28:02) 
-- CODE:
vi = int(input("digite o volume inicial de agua na masmorra: "))
vab = int(input("digite o volume de agua bombardeado: "))
var = int(input("digite o volume retirado da masmorra: "))
acum = 0
cont = 0
final = (vi + vab) - var
while final <= 1000:
	final = (vi + vab) - var
	acum = acum + final
	cont = cont + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while final <= 1000:
NameError: name 'final' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:28:34) 
-- CODE:
vi = int(input("digite o volume inicial de agua na masmorra: "))
vab = int(input("digite o volume de agua bombardeado: "))
var = int(input("digite o volume retirado da masmorra: "))
acum = 0
cont = 0
final = (vi + vab) - var
while final <= 1000:
	final = (vi + vab) - var
	acum = (acum + final) / 36
	cont = cont + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while final <= 1000:
NameError: name 'final' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:28:40) 
-- CODE:
vi = int(input("digite o volume inicial de agua na masmorra: "))
vab = int(input("digite o volume de agua bombardeado: "))
var = int(input("digite o volume retirado da masmorra: "))
acum = 0
cont = 0
final = (vi + vab) - var
while final <= 1000:
	final = (vi + vab) - var
	acum = (acum + final) / 36
	cont = cont + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while final <= 1000:
NameError: name 'final' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:29:04) 
-- CODE:
vi = int(input("digite o volume inicial de agua na masmorra: "))
vab = int(input("digite o volume de agua bombardeado: "))
var = int(input("digite o volume retirado da masmorra: "))
acum = 0
cont = 0
final = (vi + vab) - var
while final <= 1000:
	final = (vi + vab) - var
	acum = (acum + final) / 36
	cont = cont + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while final <= 1000:
NameError: name 'final' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:40:02) 
-- CODE:
vi = int(input("digite o volume inicial de agua na masmorra: "))
vab = int(input("digite o volume de agua bombardeado: "))
var = int(input("digite o volume retirado da masmorra: "))
acum = 0
cont = 0
final = (vi + vab) - var
while final <= 1000:
	final = (vi + vab) - var
	acum = acum + final
	cont = cont + 1
print(cont)
-- EXECUTION TIME:
723.324
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:41:02) 
-- CODE:
vi = int(input("digite o volume inicial de agua na masmorra: "))
vab = int(input("digite o volume de agua bombardeado: "))
var = int(input("digite o volume retirado da masmorra: "))
acum = 0
cont = 0
final = (vi + vab) - var
while final <= 1000:
	final = (vi + vab) - var
	acum = acum + final
	cont = cont + 1
print(cont)
-- EXECUTION TIME:
786.357
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
